--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^1.2.0",
     "react-scripts": "1.1.5"
   },
   "scripts": {
