--- a/package.json
+++ b/package.json
@@ -12,12 +12,24 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-router-hash-link": "^1.2.0",
-    "react-scripts": "1.1.5"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
